fix bug in update controller
