# docs/swagger.json
@@ -174,6 +174,12 @@
                             "$ref": "#/definitions/models.Reservation"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/lib.ErrorResponse"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -334,8 +340,7 @@
             "required": [
                 "facility_id",
                 "parked_vehicle_id",
-                "reservation_id",
-                "update_possible"
+                "reservation_id"
             ],
             "properties": {
                 "facility_id": {
